cabal-version:       3.0
name:                hs-stdlib
version:             0.1.0.0
homepage:            https://github.com/danwdart/projects#readme
license:             AGPL-3.0-only
author:              Dan Dart
maintainer:          cabal@dandart.co.uk
copyright:           2019 Dan Dart
category:            Web
build-type:          Simple
extra-source-files:  README.md

common shared-properties
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  ghcjs-options:       -dedupe

library
  import: shared-properties
  build-depends:
      base >= 4.7 && < 5
    , bifunctors
    , containers
    , extra
    , hxt
    , hxt-xpath
    , MonadRandom
    , process
    , template-haskell
    , text
    , time
    , webdriver
  exposed-modules:
      Data.Bifunctor.Both
    , Data.IORef.Lifted
    , Data.List.Nub
    , Data.List.Pairs
    , Data.List.Repeat
    , Data.List.Unique
    , Data.List.Zip
    , Data.Map.Indexed
    , Data.Map.Map
    , Data.Map.Zip
    , Data.Text.Show
    , Data.Time.Constants
    , Data.Time.Conversion
    , Data.Time.Utils
    , Data.String.Extra
    , Language.Haskell.TH.Extra
    , Numeric.Round
    , Numeric.SafeDiv
    , Numeric.Statistics
    , System.Environment.Lifted
    , System.Process.Lifted
    , Test.WebDriver.Config.Browsers
    , Text.XML.HXT.XPath.XPath
    , StdPrelude
    -- ToMove - move it!

test-suite hs-stdlib-test
  import: shared-properties
  hs-source-dirs:      src, test
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  build-depends:
    , hspec
    , hspec-core
    , hspec-expectations
    , QuickCheck