cabal-version:      3.0

-- Newer versions complain
name:               hs-stdlib
version:            0.1.0.0
homepage:           https://github.com/danwdart/projects#readme
license:            AGPL-3.0-only
author:             Dan Dart
maintainer:         cabal@dandart.co.uk
copyright:          2019 Dan Dart
category:           Web
build-type:         Simple
extra-source-files: README.md

common shared-properties
  hs-source-dirs:     lib
  default-language:   GHC2021
  default-extensions:
    DerivingStrategies
    ImportQualifiedPost
    UnicodeSyntax

  build-depends:      base >=4.14.1.0 && <5
  ghc-options:
    -Wall -Werror -haddock -threaded -rtsopts -with-rtsopts=-N
    -Weverything -Wno-unsafe -Wno-safe -Wno-missing-import-lists
    -Wno-missing-export-lists -Wno-implicit-prelude
    -Wno-missing-safe-haskell-mode -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-missing-local-signatures -Wno-all-missed-specialisations
    -Wno-missing-role-annotations -Wno-unrecognised-warning-flags

  ghcjs-options:      -dedupe

library
  import:             shared-properties
  default-language:   GHC2021
  default-extensions:
    DerivingStrategies
    ImportQualifiedPost
    UnicodeSyntax

  build-depends:
    , base              >=4.14.1.0 && <5
    , containers
    , extra
    , hxt
    , hxt-xpath
    , MonadRandom
    , numeric-prelude
    , process
    , template-haskell
    , text
    , time

  -- , webdriver
  exposed-modules:
    Data.Bifunctor.Both
    Data.Function.Iteration
    Data.IORef.Lifted
    Data.List.Nub
    Data.List.Pairs
    Data.List.Repeat
    Data.List.Unique
    Data.List.Zip
    Data.Map.Indexed
    Data.Map.Map
    Data.Map.Zip
    Data.String.Extra
    Data.Text.Show
    Data.Time.Constants
    Data.Time.Conversion
    Data.Time.Utils
    Language.Haskell.TH.Extra
    Numeric.Round
    Numeric.SafeDiv
    Numeric.Statistics
    StdPrelude
    System.Environment.Lifted
    System.Process.Lifted
    Text.XML.HXT.XPath.XPath

-- , Test.WebDriver.Config.Browsers
-- ToMove - move it!

test-suite hs-stdlib-test
  -- import: shared-properties
  default-language:   GHC2021
  default-extensions:
    DerivingStrategies
    ImportQualifiedPost
    UnicodeSyntax

  ghc-options:
    -Wall -Werror -haddock -threaded -rtsopts -with-rtsopts=-N
    -Weverything -Wno-unsafe -Wno-safe -Wno-missing-import-lists
    -Wno-missing-export-lists -Wno-implicit-prelude
    -Wno-missing-safe-haskell-mode -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-missing-local-signatures -Wno-all-missed-specialisations
    -Wno-missing-role-annotations -Wno-unrecognised-warning-flags

  ghcjs-options:      -dedupe
  hs-source-dirs:     lib test
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  build-depends:      hspec

-- , hspec-core
-- , hspec-expectations
-- , QuickCheck
